syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.betpawa.wallet";
option java_outer_classname = "WalletProto";
option objc_class_prefix = "WP";

package wallet;

import "google/protobuf/empty.proto";

// Interface exposed by the server
service Wallet {

    // RPC to deposit funds to an user's wallet.
    // An error is thrown if an unknown currency is submitted.
    rpc Deposit(WalletRequest) returns (google.protobuf.Empty) {}

    // RPC to withdraw funds from the user's wallet.
    // An error is thrown if an unknown currency is submitted
    // or if the user has insufficient funds.
    rpc Withdraw(WalletRequest) returns (google.protobuf.Empty) {}

    // RPC to get the user's current balance for each currency.
    rpc Balance(WalletRequest) returns (BalanceSummary) {}

    // User registration
    rpc Register(UserRequest) returns (google.protobuf.Empty) {}
}

message WalletRequest {
    int64 user = 1;
    string amount = 2;
    CURRENCY currency = 3;
}

message UserRequest {
    int64 id = 1;
    string name = 2;
}

message BalanceSummary {
    map<int32, string> amount = 1;
}

enum CURRENCY {
    INVALID = 0;
    USD = 1;
    EUR = 2;
    GBP = 3;
}

enum OPERATION_TYPE {
    TRANSACTION = 0;
    SUMMARY = 1;
}

enum ROUND {
    A = 0;
    B = 1;
    C = 2;
}
